--- a/Lab1_4C123/Objects/Lab1.build_log.htm
+++ b/Lab1_4C123/Objects/Lab1.build_log.htm
@@ -27,6 +27,9 @@ Project File Date:  09/05/2019
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target'
+compiling BSP.c...
+linking...
+Program Size: Code=12984 RO-data=2128 RW-data=296 ZI-data=2640  
 ".\Objects\Lab1.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -53,9 +56,9 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.2.0
 
    * Component: Keil::Device:Startup:1.0.1
-      Include file:  Device\Include\TM4C123\TM4C123.h
       Source file:   Device\Source\ARM\startup_TM4C123.s
       Source file:   Device\Source\system_TM4C123.c
+      Include file:  Device\Include\TM4C123\TM4C123.h
 Build Time Elapsed:  00:00:00
 </pre>
 </body>
